Remove test of a specific Django version

--- a/bin/build
+++ b/bin/build
@@ -13,4 +13,4 @@ echo "Building image"
 docker build --tag django-docker "$source_dir"
 
 echo "Testing image"
-docker run --rm -it django-docker bash -c 'python -m unittest discover --start-directory /opt/test'
+docker run --rm -it django-docker python -c 'import django; print(django.get_version())'
